# flomo-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: api.rs  app.rs  cli.rs  db.rs  image.rs  main.rs  ui.rs
