[package]
name = "flomo-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
chrono = "0.4"
unicode-width = "0.2"
regex = "1"
dirs = "6"
openssl = { version = "0.10", features = ["vendored"] }
